# macfuse4j

./: README.md  pom.xml
native/: CMakeLists.txt  one_papachi_macfuse4j_MacFuse4j.c  one_papachi_macfuse4j_MacFuse4j.h
src/main/java/one/papachi/macfuse4j/: MacFuse4j.java
src/main/java/one/papachi/macfuse4j/results/: ChmodResult.java  ChownResult.java  CreateResult.java  DirEntry.java  GetattrResult.java  MkdirResult.java  OpenResult.java  ReadResult.java  ReaddirResult.java  RenameResult.java  RmdirResult.java  TruncateResult.java  UnlinkResult.java  UtimentsResult.java  WriteResult.java
src/main/resources/one/papachi/macfuse4j/: libmacfuse4j.dylib
