cmake_minimum_required(VERSION 3.19)
project(macfuse4j C)
set(CMAKE_C_STANDARD 99)
add_library(macfuse4j SHARED one_papachi_macfuse4j_MacFuse4j.c one_papachi_macfuse4j_MacFuse4j.h)
find_library(FUSE_LIB libfuse)
target_link_libraries(macfuse4j /usr/local/lib/libfuse.dylib)
add_definitions(-D_FILE_OFFSET_BITS=64 -DFUSE_USE_VERSION=29 -D_DARWIN_USE_64_BIT_INODE)
include_directories(/usr/local/lib)
include_directories(/usr/local/include)
include_directories(/usr/local/lib/pkgconfig)
include_directories(/usr/local/include/fuse)
include_directories("/Library/Java/JavaVirtualMachines/jdk-17.0.4.1.jdk/Contents/Home/include")
include_directories("/Library/Java/JavaVirtualMachines/jdk-17.0.4.1.jdk/Contents/Home/include/darwin")
